--- a/gb/24/7/30/n14301675.md
+++ b/gb/24/7/30/n14301675.md
@@ -13,6 +13,9 @@
 <p>中国疾病预防控制中心的监测数据显示，中国6月份新冠病毒（中共病毒）检出率出现小幅上升，其中病毒JN.1变异株XDV占比上升。</p>
 <p>据胡洋医生介绍，XDV变异株是JN.1的一个亚分支，这个病毒株似乎毒力差一些，但传播力还是强的，所以不少人又中招了。不少人感染病毒后，都明显感觉“身体被掏空”，免疫力差了很多。</p>
 <p>近日，四川成都一位工程师对大纪元表示，他们单位同事的亲戚从加拿大回成都探亲，结果就中招了，妈妈在回加拿大的飞机上就出现发烧症状，随后女儿也出现了，新冠（中共病毒）检测是阳性。</p>
+<p>居住在长春市的刘女士告诉大纪元记者，她弟弟上个星期刚刚出院，“（弟弟）高烧不退，有点不清醒了，大概六月末去的（医院），医院人满为患，根本没有床位，弟妹找了熟人托关系才住院治疗，全是这个（新冠）但是医生不说，也不给抗原检测，就说是感冒，老百姓都知道（是新冠）。大伙都说是花钱续命。这次治疗的挺及时，用药也恰当，给抢救清醒了。”</p>
+<p>她说， “弟妹腰脱，还有关节炎，自己也在住院，孩子们都在外地上班，根本没能力照顾，弟妹绝望了，说活不下去了，干脆吃点药（自杀）算了……”于是刘女士不但照顾外孙女，还要每天跑医院照料弟弟和弟妹。</p>
+<p>“这还算是生活水平不错的，托关系找人治疗及时还能健康出院了，那些有病又没床位的（感染者）还不知道怎么样呢。”刘女士说。</p>
 <h2>官方称发烧或与五种病毒有关 专家质疑</h2>
 <p>2022年12月新冠疫情封控突然全面解封，但中国全国各地的疫情并没有随之结束，而是一波接一波出现，医院时常人满为患。很多人感觉自己的症状和新冠（这个病毒）很像，嗓子疼、咳嗽、发烧、全身酸痛……不过，医院不再做核酸检测，并出现了流感、鼻病毒、肺炎支原体、呼吸道合胞病毒、腺病毒等多种病毒同时传播的说法。</p>
 <p>腺病毒感染是官方媒体报导的一种感染情况。官方报导中提到一个病例：5岁女孩盈盈（化名）7月初突然高热伴畏寒寒战，高烧40°C，在家服了退烧药后，体温退到38°C左右。但过了半天，又复升到40°C。</p>
@@ -23,37 +26,41 @@
 <p>瑞金医院专家说，如果在三伏天出现发热症状，建议首先使用简易的病原体检测试纸进行自我检测，如新冠病毒、腺病毒、流感病毒、支原体和衣原体等。</p>
 <p>中国问题专家横河早前曾分析，中国官方医学界对非典型肺炎（Atypical pneumonias）的定义，是指由支原体、衣原体、腺病毒以及其它一些不明微生物引起的肺炎。非典型肺炎通过应用抗生素治疗大都能收到不错的效果，很多患者甚至不用住院就能痊愈。</p>
 <p>他在《菁英论坛》表示，我觉得比较奇怪的是，现在报导说几种所谓病毒同时存在，我觉得有两种可能性。一种可能性就是目前的疫情是某一种还没有测出来的病原体引发的，另一种可能性就是中共不想宣布（已经测出来）的新病原体造成的。所以它就编出很多理由来。现在最糟糕的情况是外界不知道真相。</p>
+<p>（大纪元记者李平对本文有贡献）</p>
 <p>责任编辑：李净#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265562.md#1">中国肺结节高危者暴增 专家推荐避疫之法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273916.md#1">28名中共文宣高官密集病亡 23人为党员</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295435.md#1">15名中共省部级高官与高级将领密集病亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298558.md#1">9天内17名中共院士教授密集病亡</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/8/n10285795.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(下)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/26/n10250277.md#1" target="_blank">中共淫乱的前生今世（7）高危的情妇们</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291211.md#1">【未解之谜】精准预测川普遇刺 牧师：美国将在巨大危机后复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287726.md#1">【古道人生】丈夫衣锦荣归 为何夫妻却不能团圆？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293827.md#1">【未解之谜】一万年前谁修改了它们的基因？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/21/n13321190.md#1">【古韵流芳】长恨歌引传奇 白居易的来世夙愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289400.md#1">天下第一都长安城建造多神速？超乎你想像 关键法门为何？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294762.md#1">【时事金扫描】习：准备打内战！川普孙女一鸣惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294317.md#1">【新闻五人行】中共灭绝令 活摘激增 美誓制裁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294475.md#1">【菁英论坛】三中全会真有事 “改革家”下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294394.md#1">中国经济衰退 各地大量店铺倒闭转让</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294196.md#1">微软宕机 中国人“感谢微软”上热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294437.md#1">缺席《甄嬛传》团综 孙俪携全家游英国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294392.md#1">“武侠影后”郑佩佩去世 刘涛赴美送最后一程?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294453.md#1">离婚后相关官司缠身两年 裘莉望彼特撤诉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294326.md#1">《异能》获2024青龙系列大奖大赏 成大赢家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293972.md#1">武打女星郑佩佩78岁逝世 周星驰发文悼念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295177.md#1">专家：搭乘飞机若不想有时差 别做这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293931.md#1">发长2米多 拥有世界最长头发的女子谈护发</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289663.md#1">摆脱忧郁情绪 四招开胯拉筋有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291153.md#1">盘点健康的香草和香料 替你的料理加分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295238.md#1">世界最宽的大道在阿根廷 有16个车道</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/30/n14301675.htm">中国疫情现上升趋势 官方承认变异株传播力强</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301675.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
